# gov-aggregator-contracts

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  wasmkit.config.js
checkpointsforall/alldao/: chain_registry.yaml  cwd_core.yaml  cwd_pre_propose_single.yaml  cwd_proposal_single.yaml  ica_helper.yaml  icq_helper.yaml
checkpointsforall/hubOsmo/: chain_registry.yaml  cwd_core.yaml  cwd_pre_propose_single.yaml  cwd_proposal_single.yaml  ica_helper.yaml  icq_helper.yaml
checkpointsforall/junoosmo/: chain_registry.yaml  cwd_core.yaml  cwd_pre_propose_single.yaml  cwd_proposal_single.yaml  ica_helper.yaml  icq_helper.yaml
contracts/dao/chain-registry/: Cargo.toml
contracts/dao/chain-registry/schema/: config_response.json  execute_msg.json  query_msg.json
contracts/dao/chain-registry/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/dao/chain_registry/: README.md
contracts/dao/chain_registry/examples/: schema.rs
contracts/dao/chain_registry/schema/: config.json  config_response.json  connection_response.json  execute_msg.json  holder.json  holder_response.json  instantiate_msg.json  query_msg.json  state.json
contracts/dao/chain_registry/src/: contract.rs  msg.rs  state.rs
contracts/dao/cwd-core/: Cargo.toml  README.md
contracts/dao/cwd-core/schema/: cwd-core.json
contracts/dao/cwd-core/schema/raw/: execute.json  instantiate.json  query.json  response_to_dump_state.json
contracts/dao/cwd-core/src/: contract.rs  error.rs  msg.rs  query.rs  state.rs
contracts/dao/ica-helper/: Cargo.toml
contracts/dao/ica-helper/schema/: execute_msg.json
contracts/dao/ica-helper/src/: contract.rs  msg.rs
contracts/dao/ica_helper/: Cargo.toml  README.md
contracts/dao/ica_helper/examples/: schema.rs
contracts/dao/ica_helper/src/: contract.rs
contracts/dao/icq-helper/: Cargo.toml
contracts/dao/icq-helper-old/: Cargo.toml
contracts/dao/icq-helper-old/schema/: execute_msg.json  query_msg.json
contracts/dao/icq-helper-old/src/: contract.rs  msg.rs
contracts/dao/icq-helper/schema/: execute_msg.json  query_msg.json
contracts/dao/icq-helper/src/: contract.rs  msg.rs  state.rs
contracts/dao/icq_helper/: Cargo.toml
contracts/dao/icq_helper/examples/: schema.rs
contracts/dao/icq_helper/schema/: query_msg.json
contracts/dao/icq_helper/src/: contract.rs  msg.rs
contracts/dao/pre-propose/cwd-pre-propose-multiple/: Cargo.toml
contracts/dao/pre-propose/cwd-pre-propose-multiple/schema/: cwd-pre-propose-multiple.json
contracts/dao/pre-propose/cwd-pre-propose-multiple/schema/raw/: execute.json
contracts/dao/pre-propose/cwd-pre-propose-multiple/src/: contract.rs
contracts/dao/pre-propose/cwd-pre-propose-single/: Cargo.toml  README.md
contracts/dao/pre-propose/cwd-pre-propose-single/schema/: cwd-pre-propose-single.json
contracts/dao/pre-propose/cwd-pre-propose-single/schema/raw/: execute.json
contracts/dao/pre-propose/cwd-pre-propose-single/src/: contract.rs  lib.rs
contracts/dao/proposal/cwd-proposal-multiple/: Cargo.toml
contracts/dao/proposal/cwd-proposal-multiple/schema/: cwd-proposal-multiple.json
contracts/dao/proposal/cwd-proposal-multiple/schema/raw/: execute.json  response_to_list_proposals.json  response_to_proposal.json  response_to_reverse_proposals.json
contracts/dao/proposal/cwd-proposal-single/: Cargo.toml  README.md
contracts/dao/proposal/cwd-proposal-single/schema/: cwd-proposal-single.json
contracts/dao/proposal/cwd-proposal-single/schema/raw/: execute.json  response_to_list_proposals.json  response_to_proposal.json  response_to_reverse_proposals.json
contracts/dao/proposal/cwd-proposal-single/src/: contract.rs  error.rs  msg.rs  proposal.rs
contracts/dao/voting/credits-vault/: Cargo.toml
contracts/dao/voting/investors-vesting-vault/: Cargo.toml
contracts/dao/voting/neutron-vault/: Cargo.toml
contracts/dao/voting/neutron-vault/schema/: neutron-vault.json
contracts/dao/voting/neutron-vault/schema/raw/: execute.json  instantiate.json  (+1 more)
contracts/dao/voting/neutron-vault/src/: contract.rs  msg.rs  state.rs
contracts/dao/voting/neutron-voting-registry/: Cargo.toml
contracts/dao/voting/neutron-voting-registry/src/: contract.rs  msg.rs
diagrams/: dao_core.excalidraw  demandFund.excalidraw  vote.excalidraw
scripts/: dao_creation.ts  dao_creation_flow.ts  deploy_all_dao.ts  deploy_cosmwasm_dao.ts  deploy_hub_osmo_dao.ts  fund_remote_account.ts  ica_flow.ts  icq_flow.ts  icq_tx_flow.ts  proposal_module_flow.ts  query_remote_balance.ts  query_remote_proposals.ts  stake_on_remote_chain.ts  voting_module_flow.ts
scripts/config/: localnet.json  mainnet.json
setup/: delegate.ts  fund_remote_account.ts  ibc_transfer.ts  package.json  undelegate.ts
