[workspace]
members = [
    "contracts/dao/cwd-core",
    "contracts/dao/ica_helper",
    "contracts/dao/icq_helper",
    "contracts/dao/chain_registry",
    "contracts/dao/proposal/*",
    "contracts/dao/pre-propose/*",
    "contracts/dao/voting/*",
    

    "packages/*",
]

[profile.release]
codegen-units = 1
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
panic = 'abort'
incremental = false
# Please do not disable these. Doing so will cause overflow checks in
# all workspace members to stop working. Overflows should be errors.
overflow-checks = true
