[package]
name = "chain-registry"
version = "0.1.0"
authors = ["Udit Gulati"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-std = {version = "1.3.0", features = ["ibc3"]}
cosmwasm-storage = {version = "1.3.0"}
cw-paginate = {path = "../../../packages/cw-paginate"}
cw-storage-plus = "1.1.0"
cw-utils = {version = "1.0.1"}
cw2 = "1.1.0"
cw20 = "1.1.0"
cw721 = "0.18.0"
cwd-interface = {path = "../../../packages/cwd-interface"}
cwd-macros = {path = "../../../packages/cwd-macros"}
neutron-sdk = {package = "neutron-sdk", version = "0.6.1"}
schemars = "0.8.8"
serde = {version = "1.0.175", default-features = false, features = ["derive"]}
thiserror = {version = "1.0"}
