[package]
name = "ica-helper"
authors = ["Adarsh"]
description = "A DAO DAO core module."
edition = "2021"
version = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {version = "1.3.0"}
cosmwasm-std = {version = "1.3.0"}
cosmwasm-storage = {version = "1.3.0"}
neutron-sdk = { path = "../../../packages/neutron-sdk", default-features = false }
serde = {version = "1.0.175", default-features = false, features = ["derive"]}
thiserror = {version = "1.0"}


cw2 = "0.15.1"
schemars = "0.8.10"
serde-json-wasm = { version = "0.4.1" }
cw-storage-plus = { version = "0.14.0", features = ["iterator"]}
cosmos-sdk-proto = { version = "0.14.0", default-features = false }
base64 = "0.13.0"
protobuf = { version = "3.2.0", features = ["with-bytes"] }
prost = "0.11"
prost-types = "0.11"
bech32 = "0.9.0"
